4.0
	+ Name in Module Status is now "Domain Controller and File Sharing"
	+ Set version to 4.0
	+ Fix migration to preserve group type
	+ Ignore cloud-sync warnings from cron
	+ Check DN not exists on the same container creating contacts
	+ Add missing 'use EBox::LDAP::ExternalAD' to Samba.pm
	+ Improve save changes speed avoiding loop in postServiceHook if no changes
	  made to roaming profiles
	+ Implement nameserverAdded and nameserverDelete from NetworkObserver to
	  reset LDAP connection if name servers change in external AD mode
	+ Add dpkg trigger to restart module when samba package is upgraded
	+ Fix ad-migrate script mode check
	+ Adapted to changes in group mail account
	+ Show a warning on post save changes dialog if errors happend while
	  setting shares ACLs
	+ Do not check for acl and user_xattr filesystem options if filesystem is
	  btrfs
	+ Provision: Check domain netbios name is not equal to host netbios name
	+ Resolve schema master dns name and try to connect to all returned IP
	  addresses until success
	+ Skip schema extensions if module disabled
	+ Use bash as default shell
	+ Added external AD field to LDAP information model
	+ Allow unsafe chars on admin account to use for join a domain
	+ Improve the LDIF files parsing created by output of ldbsearch command
	+ Fixed problems with checking mail address duplicates
	+ Fixed bug which could delete the group mail account after a
	  group edit
	+ openchange.conf named properties config uses splitted params
	+ Added EBox::module::LDAP::_loadSchemasFiles
	+ Added EBox::Samba::LdapObject::hasObjectClass
	+ Hide the dns-hostname account after join a domain
	+ Remove mail account management logic from edit user form. This field
	  is now disabled when the mail module is installed, so account management
	  like create, rename or delete it must be done in the mail module user
	  addon
	+ Added code for migration from 3.4
	+ Instance groups using gid parameter is no longer allowed
3.5.2